--- a/halaman2.html
+++ b/halaman2.html
@@ -24,15 +24,16 @@ body{
     100%{background-position:0% 50%}
 }
 
-/* menu */
+/* ===== MENU BUTTON MODERN ===== */
 .menu-btn{
     position:fixed;
     top:15px;
     left:15px;
-    width:42px;
-    height:42px;
+    width:46px;
+    height:46px;
     background:rgba(255,255,255,.25);
-    border-radius:12px;
+    backdrop-filter:blur(8px);
+    border-radius:14px;
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -40,31 +41,53 @@ body{
     padding:10px;
     cursor:pointer;
     z-index:999;
+    transition:.3s;
+}
+.menu-btn:hover{
+    box-shadow:0 0 20px cyan;
 }
 .menu-btn span{
     height:3px;
     background:#fff;
     border-radius:4px;
 }
+
+/* ===== MENU NAVIGASI MODERN ===== */
 .menu{
     position:fixed;
-    top:70px;
+    top:75px;
     left:15px;
-    display:none;
+    display:flex;
     flex-direction:column;
-    gap:10px;
-    padding:15px;
-    background:rgba(0,0,0,.6);
-    border-radius:14px;
+    gap:12px;
+    padding:18px;
+    background:rgba(0,0,0,.65);
+    backdrop-filter:blur(12px);
+    border-radius:18px;
+    transform:translateX(-130%);
+    opacity:0;
+    transition:.4s ease;
     z-index:999;
+}
+.menu.show{
+    transform:translateX(0);
+    opacity:1;
 }
 .menu a{
     color:#fff;
     text-decoration:none;
+    padding:10px 18px;
+    border-radius:12px;
+    background:rgba(255,255,255,.1);
+    transition:.3s;
 }
-.menu.show{display:flex}
+.menu a:hover{
+    background:linear-gradient(45deg,#00f2fe,#4facfe);
+    color:#000;
+    box-shadow:0 0 15px cyan;
+}
 
-/* theme */
+/* ===== THEME ===== */
 .theme-toggle{
     position:fixed;
     top:15px;
@@ -84,7 +107,7 @@ body.light{
     background:linear-gradient(45deg,#f8f9fa,#e3f2fd,#e0f7fa,#fffde7);
 }
 
-/* animasi */
+/* ===== ANIMASI ===== */
 .fade-up{
     opacity:0;
     transform:translateY(40px);
@@ -96,7 +119,7 @@ body.light{
     to{opacity:1;transform:translateY(0)}
 }
 
-/* title */
+/* ===== TITLE ===== */
 h1{
     margin-top:80px;
     color:#e0ffff;
@@ -107,7 +130,7 @@ h1{
     margin-bottom:30px;
 }
 
-/* lagu */
+/* ===== LAGU ===== */
 .containers{
     display:flex;
     flex-wrap:wrap;
@@ -132,7 +155,7 @@ h1{
 }
 audio{display:none}
 
-/* play button */
+/* ===== PLAY BUTTON ===== */
 button{
     width:48px;
     height:48px;
@@ -151,7 +174,7 @@ button{
     border-bottom:8px solid transparent;
 }
 
-/* equalizer */
+/* ===== EQUALIZER ===== */
 .bars{
     display:flex;
     gap:4px;
@@ -170,7 +193,7 @@ button{
     100%{height:6px}
 }
 
-/* copyright */
+/* ===== COPYRIGHT ===== */
 .copyright{
     font-size:12px;
     color:#555;
@@ -179,27 +202,7 @@ button{
     opacity:0;
     transition:.4s;
 }
-.copyright.show{
-    opacity:1;
-}
-
-/* pagination */
-.pagination{
-    margin:30px 0;
-    display:flex;
-    gap:10px;
-}
-.pagination button{
-    padding:6px 14px;
-    border-radius:8px;
-    border:none;
-    background:rgba(255,255,255,.4);
-    cursor:pointer;
-}
-.pagination button.active{
-    background:#007bff;
-    color:#fff;
-}
+.copyright.show{opacity:1}
 </style>
 </head>
 
@@ -210,10 +213,10 @@ button{
 </div>
 
 <div class="menu" id="menu">
-<a href="index.html" onclick="closeMenu()">menu awal</a>
-<a href="halaman2.html" onclick="closeMenu()">lagu dj/happy</a>
-<a href="halaman3.html" onclick="closeMenu()">lagu galau</a>
-<a href="halaman4.html" onclick="closeMenu()">tentang kami</a>
+<a href="index.html" onclick="closeMenu()">🏠 Menu Awal</a>
+<a href="halaman2.html" onclick="closeMenu()">🎧 Lagu DJ / Happy</a>
+<a href="halaman3.html" onclick="closeMenu()">💔 Lagu Galau</a>
+<a href="halaman4.html" onclick="closeMenu()">ℹ️ Tentang Kami</a>
 </div>
 
 <div class="theme-toggle" onclick="toggleTheme()">
@@ -241,17 +244,19 @@ button{
 <button onclick="togglePlay(2)"><div class="play-icon"></div></button>
 </div>
 
-<div class="container song">
-<img src="image/lagu3.jpg">
-<h3>Judul Lagu 3</h3>
-<p class="copyright" id="copy3">© Nama Pencipta</p>
-<audio id="audio3" src="audio/lagu3.mp3"></audio>
-<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
-</div>
-
 </div>
 
 <script>
+function toggleMenu(){
+document.getElementById("menu").classList.toggle("show");
+}
+function closeMenu(){
+document.getElementById("menu").classList.remove("show");
+}
+function toggleTheme(){
+document.body.classList.toggle("light");
+}
+
 /* typing */
 function typingText(el,text,speed,delay=0){
 setTimeout(()=>{
@@ -263,30 +268,12 @@ if(i>=text.length) clearInterval(int);
 },speed);
 },delay);
 }
-typingText(
-document.getElementById("typing-title"),
-"selamat datang di koleksi lagu",
-70
-);
-typingText(
-document.getElementById("typing-desc"),
-"nikmati lagu favorit dengan tampilan neon modern",
-35,
-1500
-);
+typingText(document.getElementById("typing-title"),
+"selamat datang di koleksi lagu",70);
+typingText(document.getElementById("typing-desc"),
+"nikmati lagu favorit dengan tampilan neon modern",35,1500);
 
-/* menu & theme */
-function toggleMenu(){
-document.getElementById("menu").classList.toggle("show");
-}
-function closeMenu(){
-document.getElementById("menu").classList.remove("show");
-}
-function toggleTheme(){
-document.body.classList.toggle("light");
-}
-
-/* audio + copyright */
+/* audio */
 let currentAudio=null;
 let currentButton=null;
 let beatInterval=null;
@@ -294,7 +281,7 @@ let beatInterval=null;
 function togglePlay(id){
 const audio=document.getElementById("audio"+id);
 const button=audio.nextElementSibling;
-const copyright=document.getElementById("copy"+id);
+const copy=document.getElementById("copy"+id);
 
 document.querySelectorAll(".copyright")
 .forEach(c=>c.classList.remove("show"));
@@ -309,7 +296,7 @@ clearInterval(beatInterval);
 if(audio.paused){
 audio.play();
 button.innerHTML='<div class="bars"><div></div><div></div><div></div><div></div></div>';
-copyright.classList.add("show");
+copy.classList.add("show");
 
 currentAudio=audio;
 currentButton=button;
@@ -322,14 +309,14 @@ b.style.backgroundColor=`hsl(${Math.random()*360},100%,60%)`;
 
 audio.onended=()=>{
 button.innerHTML='<div class="play-icon"></div>';
-copyright.classList.remove("show");
+copy.classList.remove("show");
 clearInterval(beatInterval);
 };
 }else{
 audio.pause();
 audio.currentTime=0;
 button.innerHTML='<div class="play-icon"></div>';
-copyright.classList.remove("show");
+copy.classList.remove("show");
 clearInterval(beatInterval);
 }
 }
