--- a/halaman3.html
+++ b/halaman3.html
@@ -28,39 +28,70 @@ body{
     100%{background-position:30% 40%,70% 30%,60% 70%,center}
 }
 
-/* ===== menu ===== */
+/* ===== MENU BUTTON ===== */
 .menu-btn{
     position:fixed;
     top:15px;
     left:15px;
-    width:42px;
-    height:42px;
+    width:46px;
+    height:46px;
     background:rgba(255,255,255,.25);
-    border-radius:12px;
+    backdrop-filter:blur(8px);
+    border-radius:14px;
     display:flex;
     flex-direction:column;
     justify-content:center;
     gap:6px;
     padding:10px;
     cursor:pointer;
+    z-index:999;
+    transition:.3s;
 }
-.menu-btn span{height:3px;background:#fff;border-radius:4px}
+.menu-btn:hover{
+    box-shadow:0 0 20px cyan;
+}
+.menu-btn span{
+    height:3px;
+    background:#fff;
+    border-radius:4px;
+}
+
+/* ===== MENU NAVIGASI ===== */
 .menu{
     position:fixed;
-    top:70px;
+    top:75px;
     left:15px;
-    display:none;
+    display:flex;
     flex-direction:column;
-    gap:10px;
-    padding:15px;
-    background:rgba(0,0,0,.6);
-    border-radius:14px;
-    backdrop-filter:blur(10px);
+    gap:12px;
+    padding:18px;
+    background:rgba(0,0,0,.65);
+    backdrop-filter:blur(12px);
+    border-radius:18px;
+    transform:translateX(-140%);
+    opacity:0;
+    transition:.4s ease;
+    z-index:999;
 }
-.menu a{color:#fff;text-decoration:none}
-.menu.show{display:flex}
+.menu.show{
+    transform:translateX(0);
+    opacity:1;
+}
+.menu a{
+    color:#fff;
+    text-decoration:none;
+    padding:10px 18px;
+    border-radius:12px;
+    background:rgba(255,255,255,.1);
+    transition:.3s;
+}
+.menu a:hover{
+    background:linear-gradient(45deg,#00f2fe,#4facfe);
+    color:#000;
+    box-shadow:0 0 15px cyan;
+}
 
-/* ===== theme ===== */
+/* ===== THEME ===== */
 .theme-toggle{
     position:fixed;
     top:15px;
@@ -74,6 +105,7 @@ body{
     justify-content:space-between;
     padding:0 6px;
     cursor:pointer;
+    z-index:999;
 }
 body.light{
     background:
@@ -84,7 +116,7 @@ body.light{
     color:#222;
 }
 
-/* ===== lagu ===== */
+/* ===== LAGU ===== */
 .containers{
     display:flex;
     flex-wrap:wrap;
@@ -95,7 +127,7 @@ body.light{
     width:200px;
     background:#fff;
     color:#000;
-    border-radius:12px;
+    border-radius:14px;
     padding:10px;
     display:flex;
     flex-direction:column;
@@ -106,11 +138,11 @@ body.light{
     width:100%;
     aspect-ratio:1/1;
     object-fit:cover;
-    border-radius:8px;
+    border-radius:10px;
 }
 audio{display:none}
 
-/* ===== play ===== */
+/* ===== PLAY ===== */
 button{
     width:48px;
     height:48px;
@@ -129,7 +161,7 @@ button{
     border-bottom:8px solid transparent;
 }
 
-/* ===== equalizer ===== */
+/* ===== EQUALIZER ===== */
 .bars{
     display:flex;
     gap:4px;
@@ -148,7 +180,7 @@ button{
     100%{height:6px}
 }
 
-/* ===== copyright ===== */
+/* ===== COPYRIGHT ===== */
 .copyright{
     font-size:12px;
     margin-top:6px;
@@ -158,23 +190,6 @@ button{
     transition:.4s;
 }
 .copyright.show{opacity:1}
-
-/* ===== pagination ===== */
-.pagination{
-    margin:30px 0;
-    display:flex;
-    gap:10px;
-}
-.pagination button{
-    padding:6px 14px;
-    border-radius:8px;
-    border:none;
-    background:rgba(255,255,255,.4);
-}
-.pagination button.active{
-    background:#007bff;
-    color:#fff;
-}
 </style>
 </head>
 
@@ -185,10 +200,10 @@ button{
 </div>
 
 <div class="menu" id="menu">
-<a href="index.html" onclick="closeMenu()">menu awal</a>
-<a href="halaman2.html" onclick="closeMenu()">lagu galau</a>
-<a href="halaman3.html" onclick="closeMenu()">lagu dj</a>
-<a href="halaman4.html" onclick="closeMenu()">tentang kami</a>
+<a href="index.html" onclick="closeMenu()">🏠 Menu Awal</a>
+<a href="halaman2.html" onclick="closeMenu()">💔 Lagu Galau</a>
+<a href="halaman3.html" onclick="closeMenu()">🎧 Lagu DJ</a>
+<a href="halaman4.html" onclick="closeMenu()">ℹ️ Tentang Kami</a>
 </div>
 
 <div class="theme-toggle" onclick="toggleTheme()">
