--- a/halaman4.html
+++ b/halaman4.html
@@ -28,15 +28,16 @@ body{
     100%{background-position:30% 40%,70% 30%,60% 70%,center;}
 }
 
-/* ===== menu ===== */
+/* ===== MENU BUTTON ===== */
 .menu-btn{
     position:fixed;
     top:15px;
     left:15px;
-    width:42px;
-    height:42px;
+    width:46px;
+    height:46px;
     background:rgba(255,255,255,.25);
-    border-radius:12px;
+    backdrop-filter:blur(8px);
+    border-radius:14px;
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -44,34 +45,53 @@ body{
     padding:10px;
     cursor:pointer;
     z-index:999;
+    transition:.3s;
+}
+.menu-btn:hover{
+    box-shadow:0 0 20px cyan;
 }
 .menu-btn span{
     height:3px;
     background:#fff;
     border-radius:4px;
 }
+
+/* ===== MENU NAVIGASI ===== */
 .menu{
     position:fixed;
-    top:70px;
+    top:75px;
     left:15px;
-    display:none;
+    display:flex;
     flex-direction:column;
-    gap:10px;
-    padding:15px;
-    background:rgba(0,0,0,.6);
-    border-radius:14px;
-    backdrop-filter:blur(10px);
+    gap:12px;
+    padding:18px;
+    background:rgba(0,0,0,.65);
+    backdrop-filter:blur(12px);
+    border-radius:18px;
+    transform:translateX(-140%);
+    opacity:0;
+    transition:.4s ease;
     z-index:999;
+}
+.menu.show{
+    transform:translateX(0);
+    opacity:1;
 }
 .menu a{
     color:#fff;
     text-decoration:none;
+    padding:10px 18px;
+    border-radius:12px;
+    background:rgba(255,255,255,.1);
     transition:.3s;
 }
-.menu a:hover{color:#0ff;}
-.menu.show{display:flex}
+.menu a:hover{
+    background:linear-gradient(45deg,#00f2fe,#4facfe);
+    color:#000;
+    box-shadow:0 0 15px cyan;
+}
 
-/* ===== theme ===== */
+/* ===== THEME ===== */
 .theme-toggle{
     position:fixed;
     top:15px;
@@ -218,19 +238,19 @@ body.light{
 
 <!-- Hamburger menu -->
 <div class="menu-btn" onclick="toggleMenu()">
-<span></span><span></span><span></span>
+    <span></span><span></span><span></span>
 </div>
 
 <div class="menu" id="menu">
-<a href="index.html" onclick="closeMenu()">menu awal</a>
-<a href="halaman2.html" onclick="closeMenu()">lagu galau</a>
-<a href="halaman3.html" onclick="closeMenu()">lagu dj</a>
-<a href="halaman4.html" onclick="closeMenu()">tentang kami</a>
+    <a href="index.html" onclick="closeMenu()">🏠 Menu Awal</a>
+    <a href="halaman2.html" onclick="closeMenu()">💔 Lagu Galau</a>
+    <a href="halaman3.html" onclick="closeMenu()">🎧 Lagu DJ</a>
+    <a href="halaman4.html" onclick="closeMenu()">ℹ️ Tentang Kami</a>
 </div>
 
 <!-- Theme toggle -->
 <div class="theme-toggle" onclick="toggleTheme()">
-<span>☀</span><span>🌙</span>
+    <span>☀</span><span>🌙</span>
 </div>
 
 <!-- Konten tentang kami -->
