--- a/halaman4.html
+++ b/halaman4.html
@@ -243,8 +243,8 @@ body.light{
 
 <div class="menu" id="menu">
     <a href="index.html" onclick="closeMenu()">🏠 Menu Awal</a>
-    <a href="halaman2.html" onclick="closeMenu()">💔 Lagu Galau</a>
-    <a href="halaman3.html" onclick="closeMenu()">🎧 Lagu DJ</a>
+    <a href="halaman2.html" onclick="closeMenu()">🎧 Lagu Dj/Happy</a>
+    <a href="halaman3.html" onclick="closeMenu()">💔 Lagu Galau</a>
     <a href="halaman4.html" onclick="closeMenu()">ℹ️ Tentang Kami</a>
 </div>
 
