--- a/halaman2.html
+++ b/halaman2.html
@@ -244,6 +244,70 @@ button{
 <button onclick="togglePlay(2)"><div class="play-icon"></div></button>
 </div>
 
+<div class="container song">
+<img src="image/ngagadulu.jpg">
+<h3>Nga Nga dulu</h3>
+<p class="copyright" id="copy2">© Akbar Chalay, Zynakal, dan ciloqciliq</p>
+<audio id="audio2" src="audio/nga dulu.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/sweetlove dj.jpg">
+<h3>Dj Sweet Love x thai</h3>
+<p class="copyright" id="copy2">© Ferry Sopan Remix</p>
+<audio id="audio2" src="audio/sweetlove dj.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/wuchuantianjia.jpg">
+<h3>Wu Chuan Tian Jia</h3>
+<p class="copyright" id="copy2">© Teresa Teng</p>
+<audio id="audio2" src="audio/wu cuan tian ja.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/wuchuantianjia.jpg">
+<h3>Wu Chuan Tian Jia</h3>
+<p class="copyright" id="copy2">© Teresa Teng</p>
+<audio id="audio2" src="audio/wu cuan tian ja.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div> 
+
+<div class="container song">
+<img src="image/wuchuantianjia.jpg">
+<h3>Wu Chuan Tian Jia</h3>
+<p class="copyright" id="copy2">© Teresa Teng</p>
+<audio id="audio2" src="audio/wu cuan tian ja.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/wuchuantianjia.jpg">
+<h3>Wu Chuan Tian Jia</h3>
+<p class="copyright" id="copy2">© Teresa Teng</p>
+<audio id="audio2" src="audio/wu cuan tian ja.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/wuchuantianjia.jpg">
+<h3>Wu Chuan Tian Jia</h3>
+<p class="copyright" id="copy2">© Teresa Teng</p>
+<audio id="audio2" src="audio/wu cuan tian ja.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/wuchuantianjia.jpg">
+<h3>Wu Chuan Tian Jia</h3>
+<p class="copyright" id="copy2">© Teresa Teng</p>
+<audio id="audio2" src="audio/wu cuan tian ja.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+    
 </div>
 
 <script>
