--- a/halaman3.html
+++ b/halaman3.html
@@ -216,15 +216,15 @@ button{
 
 <div class="container song">
 <img src="image/lagu1.jpg">
-<h3>Judul Lagu 1</h3>
-<p class="copyright" id="copy1">© Pencipta Lagu 1</p>
+<h3>Multo slowed</h3>
+<p class="copyright" id="copy1">© Cup of Joe</p>
 <audio id="audio1" src="audio/lagu1.mp3"></audio>
 <button onclick="togglePlay(1)"><div class="play-icon"></div></button>
 </div>
 
 <div class="container song">
 <img src="image/lagu2.jpg">
-<h3>Judul Lagu 2</h3>
+<h3>Where we are</h3>
 <p class="copyright" id="copy2">© Pencipta Lagu 2</p>
 <audio id="audio2" src="audio/lagu2.mp3"></audio>
 <button onclick="togglePlay(2)"><div class="play-icon"></div></button>
@@ -238,6 +238,62 @@ button{
 <button onclick="togglePlay(3)"><div class="play-icon"></div></button>
 </div>
 
+<div class="container song">
+<img src="image/lagu3.jpg">
+<h3>Judul Lagu 3</h3>
+<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
+<audio id="audio3" src="audio/lagu3.mp3"></audio>
+<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/lagu3.jpg">
+<h3>Judul Lagu 3</h3>
+<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
+<audio id="audio3" src="audio/lagu3.mp3"></audio>
+<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/lagu3.jpg">
+<h3>Judul Lagu 3</h3>
+<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
+<audio id="audio3" src="audio/lagu3.mp3"></audio>
+<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/lagu3.jpg">
+<h3>Judul Lagu 3</h3>
+<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
+<audio id="audio3" src="audio/lagu3.mp3"></audio>
+<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/lagu3.jpg">
+<h3>Judul Lagu 3</h3>
+<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
+<audio id="audio3" src="audio/lagu3.mp3"></audio>
+<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/lagu3.jpg">
+<h3>Judul Lagu 3</h3>
+<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
+<audio id="audio3" src="audio/lagu3.mp3"></audio>
+<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container song">
+<img src="image/lagu3.jpg">
+<h3>Judul Lagu 3</h3>
+<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
+<audio id="audio3" src="audio/lagu3.mp3"></audio>
+<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
+</div>
+    
 </div>
 
 <script>
