--- a/halaman3.html
+++ b/halaman3.html
@@ -28,7 +28,7 @@ body{
     100%{background-position:30% 40%,70% 30%,60% 70%,center}
 }
 
-/* ===== MENU BUTTON ===== */
+/* ===== MENU ===== */
 .menu-btn{
     position:fixed;
     top:15px;
@@ -45,18 +45,8 @@ body{
     padding:10px;
     cursor:pointer;
     z-index:999;
-    transition:.3s;
 }
-.menu-btn:hover{
-    box-shadow:0 0 20px cyan;
-}
-.menu-btn span{
-    height:3px;
-    background:#fff;
-    border-radius:4px;
-}
-
-/* ===== MENU NAVIGASI ===== */
+.menu-btn span{height:3px;background:#fff;border-radius:4px}
 .menu{
     position:fixed;
     top:75px;
@@ -70,25 +60,15 @@ body{
     border-radius:18px;
     transform:translateX(-140%);
     opacity:0;
-    transition:.4s ease;
-    z-index:999;
+    transition:.4s;
 }
-.menu.show{
-    transform:translateX(0);
-    opacity:1;
-}
+.menu.show{transform:translateX(0);opacity:1}
 .menu a{
     color:#fff;
     text-decoration:none;
     padding:10px 18px;
     border-radius:12px;
     background:rgba(255,255,255,.1);
-    transition:.3s;
-}
-.menu a:hover{
-    background:linear-gradient(45deg,#00f2fe,#4facfe);
-    color:#000;
-    box-shadow:0 0 15px cyan;
 }
 
 /* ===== THEME ===== */
@@ -105,7 +85,6 @@ body{
     justify-content:space-between;
     padding:0 6px;
     cursor:pointer;
-    z-index:999;
 }
 body.light{
     background:
@@ -114,6 +93,17 @@ body.light{
         radial-gradient(circle at 50% 80%, rgba(255,0,180,.25), transparent 40%),
         #f4f6fb;
     color:#222;
+}
+
+/* ===== TYPING TITLE ===== */
+#typing-title{
+    margin-top:80px;
+    font-size:32px;
+    text-shadow:0 0 12px cyan;
+}
+#typing-desc{
+    margin-bottom:30px;
+    opacity:.9;
 }
 
 /* ===== LAGU ===== */
@@ -162,12 +152,7 @@ button{
 }
 
 /* ===== EQUALIZER ===== */
-.bars{
-    display:flex;
-    gap:4px;
-    height:22px;
-    align-items:flex-end;
-}
+.bars{display:flex;gap:4px;height:22px;align-items:flex-end}
 .bars div{
     width:4px;
     height:6px;
@@ -210,11 +195,11 @@ button{
 <span>☀</span><span>🌙</span>
 </div>
 
-<h1>koleksi lagu</h1>
+<h1 id="typing-title"></h1>
+<p id="typing-desc"></p>
 
 <div class="containers">
-
-<div class="container song">
+<div class="container">
 <img src="image/lagu1.jpg">
 <h3>Multo slowed</h3>
 <p class="copyright" id="copy1">© Cup of Joe</p>
@@ -222,78 +207,13 @@ button{
 <button onclick="togglePlay(1)"><div class="play-icon"></div></button>
 </div>
 
-<div class="container song">
+<div class="container">
 <img src="image/lagu2.jpg">
 <h3>Where we are</h3>
 <p class="copyright" id="copy2">© Pencipta Lagu 2</p>
 <audio id="audio2" src="audio/lagu2.mp3"></audio>
 <button onclick="togglePlay(2)"><div class="play-icon"></div></button>
 </div>
-
-<div class="container song">
-<img src="image/lagu3.jpg">
-<h3>Judul Lagu 3</h3>
-<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
-<audio id="audio3" src="audio/lagu3.mp3"></audio>
-<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
-</div>
-
-<div class="container song">
-<img src="image/lagu3.jpg">
-<h3>Judul Lagu 3</h3>
-<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
-<audio id="audio3" src="audio/lagu3.mp3"></audio>
-<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
-</div>
-
-<div class="container song">
-<img src="image/lagu3.jpg">
-<h3>Judul Lagu 3</h3>
-<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
-<audio id="audio3" src="audio/lagu3.mp3"></audio>
-<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
-</div>
-
-<div class="container song">
-<img src="image/lagu3.jpg">
-<h3>Judul Lagu 3</h3>
-<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
-<audio id="audio3" src="audio/lagu3.mp3"></audio>
-<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
-</div>
-
-<div class="container song">
-<img src="image/lagu3.jpg">
-<h3>Judul Lagu 3</h3>
-<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
-<audio id="audio3" src="audio/lagu3.mp3"></audio>
-<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
-</div>
-
-<div class="container song">
-<img src="image/lagu3.jpg">
-<h3>Judul Lagu 3</h3>
-<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
-<audio id="audio3" src="audio/lagu3.mp3"></audio>
-<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
-</div>
-
-<div class="container song">
-<img src="image/lagu3.jpg">
-<h3>Judul Lagu 3</h3>
-<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
-<audio id="audio3" src="audio/lagu3.mp3"></audio>
-<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
-</div>
-
-<div class="container song">
-<img src="image/lagu3.jpg">
-<h3>Judul Lagu 3</h3>
-<p class="copyright" id="copy3">© Pencipta Lagu 3</p>
-<audio id="audio3" src="audio/lagu3.mp3"></audio>
-<button onclick="togglePlay(3)"><div class="play-icon"></div></button>
-</div>
-    
 </div>
 
 <script>
@@ -307,6 +227,32 @@ function toggleTheme(){
 document.body.classList.toggle("light");
 }
 
+/* ===== TYPING TEXT ===== */
+function typingText(el,text,speed,delay=0){
+setTimeout(()=>{
+let i=0;
+el.innerHTML="";
+const int=setInterval(()=>{
+el.innerHTML+=text.charAt(i);
+i++;
+if(i>=text.length) clearInterval(int);
+},speed);
+},delay);
+}
+
+typingText(
+document.getElementById("typing-title"),
+"selamat datang di koleksi lagu",
+70
+);
+typingText(
+document.getElementById("typing-desc"),
+"nikmati lagu favorit dengan tampilan aurora modern",
+35,
+1500
+);
+
+/* ===== AUDIO ===== */
 let currentAudio=null;
 let currentButton=null;
 let beatInterval=null;
