--- a/halaman3.html
+++ b/halaman3.html
@@ -214,6 +214,71 @@ button{
 <audio id="audio2" src="audio/lagu2.mp3"></audio>
 <button onclick="togglePlay(2)"><div class="play-icon"></div></button>
 </div>
+
+<div class="container">
+<img src="image/lagu2.jpg">
+<h3>Where we are</h3>
+<p class="copyright" id="copy2">© Pencipta Lagu 2</p>
+<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container">
+<img src="image/lagu2.jpg">
+<h3>Where we are</h3>
+<p class="copyright" id="copy2">© Pencipta Lagu 2</p>
+<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container">
+<img src="image/lagu2.jpg">
+<h3>Where we are</h3>
+<p class="copyright" id="copy2">© Pencipta Lagu 2</p>
+<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container">
+<img src="image/lagu2.jpg">
+<h3>Where we are</h3>
+<p class="copyright" id="copy2">© Pencipta Lagu 2</p>
+<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container">
+<img src="image/lagu2.jpg">
+<h3>Where we are</h3>
+<p class="copyright" id="copy2">© Pencipta Lagu 2</p>
+<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container">
+<img src="image/lagu2.jpg">
+<h3>Where we are</h3>
+<p class="copyright" id="copy2">© Pencipta Lagu 2</p>
+<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container">
+<img src="image/lagu2.jpg">
+<h3>Where we are</h3>
+<p class="copyright" id="copy2">© Pencipta Lagu 2</p>
+<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+
+<div class="container">
+<img src="image/lagu2.jpg">
+<h3>Where we are</h3>
+<p class="copyright" id="copy2">© Pencipta Lagu 2</p>
+<audio id="audio2" src="audio/lagu2.mp3"></audio>
+<button onclick="togglePlay(2)"><div class="play-icon"></div></button>
+</div>
+    
 </div>
 
 <script>
